--- a/blank.html
+++ b/blank.html
@@ -161,7 +161,7 @@
           </div>
           <div class="develop">
             <p class="footer-contacts-text footer-develop">Разработано -</p>
-            <a href="https://htmlacademy.ru" class="footer-contacts-link footer-develop">htmlacademy.ru</a>
+            <a href="https://htmlacademy.ru/intensive/htmlcss" class="footer-contacts-link footer-develop">htmlacademy.ru</a>
           </div>
         </div>
       </div>
