--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@
         </li>
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="img/Makita.png" class="brand-image" width="123" height="40" alt="Makita">
+            <img src="img/makita.png" class="brand-image" width="123" height="40" alt="Makita">
           </a>
         </li>
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="img/DeWALT.png" class="brand-image" width="146" height="44" alt="DeWALT">
+            <img src="img/dewalt.png" class="brand-image" width="146" height="44" alt="DeWALT">
           </a>
         </li>
         <li class="brand-item">
@@ -215,22 +215,22 @@
         </li>
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="img/Hitachi.png" class="brand-image" width="169" height="31" alt="Hitachi">
+            <img src="img/hitachi.png" class="brand-image" width="169" height="31" alt="Hitachi">
           </a>
         </li>
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="img/LG.png" class="brand-image" width="121" height="73" alt="LG">
+            <img src="img/lg.png" class="brand-image" width="121" height="73" alt="LG">
           </a>
         </li>
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="img/AEG.png" class="brand-image" width="151" height="98" alt="AEG">
+            <img src="img/aeg.png" class="brand-image" width="151" height="98" alt="AEG">
           </a>
         </li>
         <li class="brand-item">
           <a href="blank.html" class="brand-link">
-            <img src="img/Metabo.png" class="brand-image" width="206" height="63" alt="metabo">
+            <img src="img/metabo.png" class="brand-image" width="206" height="63" alt="metabo">
           </a>
         </li>
       </ul>
@@ -376,7 +376,7 @@
           </div>
           <div class="develop">
             <p class="footer-contacts-text footer-develop">Разработано -</p>
-            <a href="https://htmlacademy.ru" class="footer-contacts-link footer-develop">htmlacademy.ru</a>
+            <a href="https://htmlacademy.ru/intensive/htmlcss" class="footer-contacts-link footer-develop">htmlacademy.ru</a>
           </div>
         </div>
       </div>
