--- a/catalog.html
+++ b/catalog.html
@@ -201,17 +201,17 @@
               </ul>
               <ul class="products-sort-arrows">
                 <li class="products-sort-item">
-                  <a class="sort-arrow-up sort-arrow-active"></a>
+                  <a class="sort-arrow-up sort-arrow-active" aria-label="Сортировка по возрастанию"></a>
                 </li>
                 <li class="products-sort-item">
-                  <a href="blank.html" class="sort-arrow-down"></a>
+                  <a href="blank.html" class="sort-arrow-down" aria-label="Сортировка по убыванию"></a>
                 </li>
               </ul>
             </div>
             <ul class="catalog-products-list">
               <li class="product-item">
                 <div class="product-image">
-                  <img src="img/snippet-945.jpg" alt="Перфоратор BOSCH BFG 6000">
+                  <img src="img/snippet-945.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </div>
                 <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 6000</a>
                 <div class="product-hover">
@@ -223,7 +223,7 @@
               </li>
               <li class="product-item">
                 <div class="product-image">
-                  <img src="img/snippet-945.jpg" alt="Перфоратор BOSCH BFG 6000">
+                  <img src="img/snippet-945.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </div>
                 <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 6000</a>
                 <div class="product-hover">
@@ -235,7 +235,7 @@
               </li>
               <li class="product-item new">
                 <div class="product-image">
-                  <img src="img/snippet-945.jpg" alt="Перфоратор BOSCH BFG 6000">
+                  <img src="img/snippet-945.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </div>
                 <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 6000</a>
                 <div class="product-hover">
@@ -247,7 +247,7 @@
               </li>
               <li class="product-item new">
                 <div class="product-image">
-                  <img src="img/snippet-18927.jpg" alt="Перфоратор BOSCH BFG 3000">
+                  <img src="img/snippet-18927.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                 </div>
                 <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 3000</a>
                 <div class="product-hover">
@@ -259,7 +259,7 @@
               </li>
               <li class="product-item">
                 <div class="product-image">
-                  <img src="img/snippet-945.jpg" alt="Перфоратор BOSCH BFG 6000">
+                  <img src="img/snippet-945.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </div>
                 <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 6000</a>
                 <div class="product-hover">
@@ -271,7 +271,7 @@
               </li>
               <li class="product-item new">
                 <div class="product-image">
-                  <img src="img/snippet-18927.jpg" alt="Перфоратор BOSCH BFG 2000">
+                  <img src="img/snippet-18927.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
                 </div>
                 <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 2000</a>
                 <div class="product-hover">
@@ -282,7 +282,7 @@
               </li>
               <li class="product-item new">
                 <div class="product-image">
-                  <img src="img/snippet-18927.jpg" alt="Перфоратор BOSCH BFG 3000">
+                  <img src="img/snippet-18927.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                 </div>
                 <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 3000</a>
                 <div class="product-hover">
@@ -294,7 +294,7 @@
               </li>
               <li class="product-item">
                 <div class="product-image">
-                  <img src="img/snippet-945.jpg" alt="Перфоратор BOSCH BFG 6000">
+                  <img src="img/snippet-945.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </div>
                 <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 6000</a>
                 <div class="product-hover">
@@ -306,7 +306,7 @@
               </li>
               <li class="product-item new">
                 <div class="product-image">
-                  <img src="img/snippet-18927.jpg" alt="Перфоратор BOSCH BFG 2000">
+                  <img src="img/snippet-18927.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
                 </div>
                 <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 2000</a>
                 <div class="product-hover">
@@ -422,7 +422,7 @@
           </div>
           <div class="develop">
             <p class="footer-contacts-text footer-develop">Разработано -</p>
-            <a href="https://htmlacademy.ru" class="footer-contacts-link footer-develop">htmlacademy.ru</a>
+            <a href="https://htmlacademy.ru/intensive/htmlcss" class="footer-contacts-link footer-develop">htmlacademy.ru</a>
           </div>
         </div>
       </div>
